--- a/Impro/app/src/main/AndroidManifest.xml
+++ b/Impro/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".FilteringService"
+            android:exported="false"/>
+
     </application>
 
     <uses-permission android:name="android.permission.CAMERA"/>
