--- a/Impro/app/build.gradle
+++ b/Impro/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:support-v13:23.1.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.shamanland:xdroid-toaster:0.2.4'
     compile project(':openCVLibrary300')
     compile project(':rangeseekbar')
 }
